Add f015w source detection

--- a/f105w-source-detection(1).ipynb
+++ b/f105w-source-detection(1).ipynb
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thresh = 5 #we make the threshold lower to be able to detect more faint sources\n",
+    "thresh = 4 #we make the threshold higher to be able to make it easier to distinguish from noise\n",
     "objects = sep.extract(data_sub, thresh, err=bkg.globalrms)\n",
     "print('Number of objects detected: ', len(objects))"
    ]
@@ -168,7 +168,9 @@
     "                angle=objects['theta'][i] * 180. / np.pi)\n",
     "    e.set_facecolor('none')\n",
     "    e.set_edgecolor('red')\n",
-    "    ax.add_artist(e)"
+    "    ax.add_artist(e)\n",
+    "    \n",
+    "plt.savefig('f105w_source_detection.png')"
    ]
   }
  ],
