The extra credit code

--- a/extra_credit.ipynb
+++ b/extra_credit.ipynb
@@ -13,13 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#this is based on a tutorila at http://docs.astropy.org/en/v3.0.2/visualization/lupton_rgb.html\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from astropy.visualization import make_lupton_rgb #the module that makes rgb image\n",
     "from astropy.io import fits                      #the module that reads fits files\n",
     "from matplotlib import rcParams    #parameters in matplotlib\n",
+    "from astropy.visualization import SqrtStretch  #the sretch tool for making the image brighter\n",
     "\n",
     "rcParams['figure.figsize'] = [12., 10.]"
    ]
@@ -50,6 +49,7 @@
     "\n",
     "#the type and shape of the three images\n",
     "#should be the same\n",
+    "\n",
     "print(\"Type r:\",type(r))\n",
     "print(\"Shape r:\",r.shape)\n",
     "\n",
@@ -57,7 +57,7 @@
     "print(\"Shape g:\",g.shape)\n",
     "\n",
     "print(\"Type b:\",type(b))\n",
-    "print(\"Shape b:\",b.shape)"
+    "print(\"Shape b:\",b.shape)\n"
    ]
   },
   {
@@ -73,28 +73,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#use make_lupton_rbg to get a rgb image\n",
-    "#stretch and Q will change how the values between black and white are scaled\n",
+    "#define the stretch tool\n",
+    "stretch = SqrtStretch()\n",
+    "#stack the rgb files together\n",
+    "rgb_stack = np.dstack([r,g,b])\n",
+    "#stretch the image\n",
+    "HUDF_RGB = stretch(rgb_stack)\n",
+    "\n",
+    "#show the image\n",
+    "plt.imshow(HUDF_RGB)\n",
     "#save as a png file\n",
-    "rgb_default = make_lupton_rgb(r, g, b, Q=10,stretch=0.08,filename = \"HUDF-RGB.png\")\n",
-    "\n",
-    "#show the stacked image\n",
-    "plt.imshow(rgb_default, vmin=0, vmax=40, origin='low')\n",
-    "\n",
-    "#the shape of the rgb image\n",
-    "print(\"rgb Shape:\",rgb_default.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#histgram of the rgb image, used to visualize the distrubition \n",
-    "#of pixel values and thus determain vmin and vmax\n",
-    "image_hist = plt.hist(rgb_default.flatten(), bins=100)\n",
-    "plt.xlim(0,100)"
+    "plt.savefig('HUDF_RGB.png')"
    ]
   }
  ],
